docs: update swagger with profile APIs
